# amplifier-bundle-m365-collab

./: README.md  bundle.md  bundle.yaml  pyproject.toml  setup.sh
context/: agent-instructions.md  agent-startup.md  controller-instructions.md
orchestrator/: ARCHITECTURE.md  launch-agent  m365  m365-orchestrator  message-poller  start  start-agent-session
personas/: base-agent.md  buckaroo-banzai.md  new-jersey.md  perfect-tommy.md  reno-nevada.md
src/amplifier_m365_collab/: __init__.py  tool.py
src/m365_collab/: __init__.py
templates/: config.template.yaml  credentials.template.json
