[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-bundle-m365-collab"
version = "1.0.0"
description = "M365 multi-agent collaboration for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.25.0",
    "httpx>=0.25.0",
]

[project.entry-points."amplifier.tools"]
m365_collab = "amplifier_m365_collab.tool:create_tool"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_m365_collab"]
